更新了微信小程序获取头像和昵称的接口，修复了ios付款后订阅消息一闪而过的bug，还有其他一些小问题。

--- a/pages/app-auth/index.wxml
+++ b/pages/app-auth/index.wxml
@@ -5,9 +5,14 @@
     <view class='logo-name'>海风小店</view>
     <view class='intro'>开源微信小程序商城</view>
     <view class='login'>请完成微信授权以继续使用</view>
-    <button class='btn-login' open-type="getUserInfo" bindgetuserinfo='getUserInfo'>
+    <!-- <button class='btn-login' open-type="getUserInfo" bindgetuserinfo='getUserInfo'>
         <image src='/images/icon/weixin-w.png' class='img-w'></image>
         <view class='text'>微信快捷登录</view>
+    </button> -->
+    <button class='btn-login' bindtap='getUserProfile'>
+        <view class='img-w'></view>
+        <view class='text'>微信快捷登录</view>
     </button>
+
     <view class="cancel" bindtap="goBack">取消</view>
 </view>
