--- a/pages/ucenter/about/index.wxml
+++ b/pages/ucenter/about/index.wxml
@@ -12,4 +12,5 @@
             更多信息访问：hiolabs.com
         </view>
     </view>
+    <!-- <ad unit-id="adunit-1776b4f8f2217197" ad-type="video" ad-theme="white"></ad> -->
 </view>
