--- a/pages/ucenter/index/index.wxml
+++ b/pages/ucenter/index/index.wxml
@@ -1,6 +1,6 @@
 <view class="container">
     <view class="userinfo">
-        <view class='head-wrap' wx:if="{{hasUserInfo == 0}}" bindtap='goAuth'>
+        <view class='head-wrap' wx:if="{{hasUserInfo == false}}" bindtap='goAuth'>
             <view class="no-login-avatar">
                 <view class='no-avatar'>
                     <image class='avatar' src="/images/icon/default_avatar_big.png"></image>
@@ -11,7 +11,7 @@
         <view class='head-wrap' wx:else bindtap='goProfile'>
             <view class="head-l">
                 <view class='l'>
-                    <image class='avatar' src="{{userInfo.avatar}}"></image>
+                    <image class='avatar' src="{{root + userInfo.avatar}}"></image>
                 </view>
                 <view class='r'>
                     <view class='t'>
