--- a/pages/ucenter/about/index.wxml
+++ b/pages/ucenter/about/index.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <view class='about-wrap'>
-    <view class='title'>海风小店</view>
+    <view class='title'>五金手中宝</view>
     <view class='content'>
       开源微信小程序商城
     </view>
